fix settings width on mobile

--- a/style.css
+++ b/style.css
@@ -416,6 +416,10 @@ button:active {
     gap: 0;
   }
 
+  .col {
+    width: 100%;
+  }
+
   .col + .col {
     padding-left: 0;
     border-left: none;
